--- a/Problem/2-3-1_recursion.ipynb
+++ b/Problem/2-3-1_recursion.ipynb
@@ -19,25 +19,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def grow(s, r):  # 文字列sと繰り返し回数rを入力\n",
-    "    ss = ''  # 出力する文字列を初期化\n",
+    "    ss =''\n",
     "    #文字列を一文字ずつ取り出してループする\n",
+    "    for letter in s:\n",
+    "        if letter =='f':\n",
+    "            ss=ss+'fg'\n",
+    "        elif letter =='g':\n",
+    "            ss=ss+'gh'\n",
+    "        elif letter ==\"h\":\n",
+    "            ss=ss+\"gf\"\n",
+    "        else:\n",
+    "            ss=ss+letter\n",
+    "    r=r-1\n",
+    "    print(ss)\n",
+    "    if r>0:\n",
+    "        ss=grow(ss,r)\n",
+    "    return ss\n",
     "    # ' f'  を ' fg'  に書き換え\n",
     "    # ' g'  を ' gh'  に書き換え\n",
     "    # hをgfに書き換え\n",
     "    # 残りの繰返し回数を1減らす\n",
     "    # 繰返し回数が0でない時，自分自身を呼び出す\n",
-    "    return ss"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -46,22 +62,15 @@
       "fgXghXgf\n",
       "fgghXghgfXghfg\n",
       "fgghghgfXghgfghfgXghgffggh\n",
-      "fgghghgfghgfghfgXghgfghfgghgffgghXghgfghfgfgghghgf\n"
+      "fgghghgfghgfghfgXghgfghfgghgffgghXghgfghfgfgghghgf\n",
+      "fgghghgfghgfghfgghgfghfgghgffgghXghgfghfgghgffgghghgfghfgfgghghgfXghgfghfgghgffgghfgghghgfghgfghfg\n",
+      "fgghghgfghgfghfgghgfghfgghgffgghXghgfghfgghgffgghghgfghfgfgghghgfXghgfghfgghgffgghfgghghgfghgfghfg\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'fgghghgfghgfghfgXghgfghfgghgffgghXghgfghfgfgghghgf'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "grow('fXgXh', 4)  # growを2回実行"
+    "word=grow('fXgXh', 5)  # growを2回実行\n",
+    "print(word)"
    ]
   },
   {
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,24 +154,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def deviding(p0, p1, r):\n",
     "    # 書く\n",
-    "    return "
+    "    return p0*r+p1*(r-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# deviding_point(点A,点B,内分比)\n",
     "def deviding_point(p0, p1, ratio):\n",
-    "    # 書く\n",
+    "    [x0,y0]=p0\n",
+    "    [x1,y1]=p1\n",
+    "    xr=deviding(x0,x1,ratio)\n",
+    "    yr=deviding(y0,y1,ratio)\n",
     "    return [xr, yr]"
    ]
   },
@@ -175,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +198,8 @@
     "    points2.append(points2[0])\n",
     "    points2.pop(0)\n",
     "    for p0, p1 in zip(points, points2):\n",
-    "        書く\n",
+    "        pr0=deviding_point(p0,p1,ratio)\n",
+    "        new_points.append(pr0)\n",
     "    return new_points"
    ]
   },
@@ -199,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,13 +244,27 @@
     "rose_window_recursion(points, 0.1, 40)\n",
     "done()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3-4.1.1]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-anaconda3-4.1.1-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -249,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
