--- a/Problem/3-1-0_koch.ipynb
+++ b/Problem/3-1-0_koch.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw(length, depth):\n",
-    "    # 書く"
+    "def draw(length , depth):\n",
+    "    if depth>0:\n",
+    "        draw(length / 3 , depth-1)\n",
+    "        tl.left(60)\n",
+    "        draw(length / 3 , depth-1)\n",
+    "        tl.right(120)\n",
+    "        draw(length / 3 , depth-1)\n",
+    "        tl.left(60)\n",
+    "        draw(length / 3 , depth-1)\n",
+    "    else:\n",
+    "        tl.forward(length)"
    ]
   },
   {
@@ -59,9 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Terminator",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTerminator\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-9037dbd7fc39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# tl.tracer(0,0) # no animation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m250\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# tl.speed(0)  # 0:fastest, 1:slow to 10:fast\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/turtle.py\u001b[0m in \u001b[0;36mup\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTerminator\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# tl.tracer(0,0) # no animation\n",
     "tl.up()\n",
@@ -71,13 +93,41 @@
     "draw(500, 2)\n",
     "tl.done()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3-4.1.1]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-anaconda3-4.1.1-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -89,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
